# Push2Type

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  audio_capture.py  build.rs  build.spec  config.py  gui.py  hotkey_handler.py  injection.py  launch.ps1  logger_setup.py  main.py  requirements.txt  spec.md  transcription.py  user_config.py
.github/: FUNDING.yml
rust/push2type-rs/: README.md
rust/push2type-rs/src/: app.rs  config.rs  main.rs  stt.rs
skills/: skills.example.md
skills/push2type-voice-bridge/: SKILL.md
src/: app.rs  audio.rs  config.rs  hotkey.rs  inject.rs  main.rs  server.rs  tts.rs
